Add About Blurb

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- Street Address · City, State Zip · (999) 999-9999 · -->
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I’m an information scientist and curiosity champion. I am passionate about teaching people how to locate resources that feel elusive.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
