Add Line Break and Feather Icons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- Street Address · City, State Zip · (999) 999-9999 · -->
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">I’m an information scientist and curiosity champion. I am passionate about teaching people how to locate resources that feel elusive.</p>
+                    <p class="lead mb-5">I’m an information scientist and curiosity champion.<br>I am passionate about teaching people how to locate resources that feel elusive.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -176,39 +176,39 @@
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Google Analytics Certified Developer
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Mobile Web Specialist - Google Certification
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             1
                             <sup>st</sup>
                             Place - University of Colorado Boulder - Emerging Tech Competition 2009
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             1
                             <sup>st</sup>
                             Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             2
                             <sup>nd</sup>
                             Place - University of Colorado Boulder - Emerging Tech Competition 2008
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             1
                             <sup>st</sup>
                             Place - James Buchanan High School - Hackathon 2006
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             3
                             <sup>rd</sup>
                             Place - James Buchanan High School - Hackathon 2005
