Replaced Experience Text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         <!-- Street Address · City, State Zip · (999) 999-9999 · -->
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:name@email.com">amanda.m.clark@du.edu</a>
                     </div>
                     <p class="lead mb-5">I’m an information scientist and curiosity champion.<br>I am passionate about teaching people how to locate resources that feel elusive.</p>
                     <div class="social-icons">
@@ -63,27 +63,27 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Cottage Lake Elementary & Rancho Sienna Elementary</h3>
+                            <div class="subheading mb-3">Volunteer Library Assistant</div>
+                            <p>Cultivated early literacy skills by guiding K-5 students to books that matched their unique interests, reading levels, and educational needs. Guided young users through uncertainty finding specific titles via Destiny Discover and managed interdistrict loan requests. Promoted library engagement and community fundraising by helping students and parents navigate events such as the Scholastic Book Fair.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2019 - 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">International Association of Crime Analysts</h3>
+                            <div class="subheading mb-3">Registrar/Invited Speakers Co-Chair</div>
+                            <p>Developed and managed efficient registration procedures, maintained records, electronically distributed conference materials and news, communicated status changes and processed payments. Processed post-conference feedback loops that increased attendance year-over-year.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2012 - 2015</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Ventura County Sheriff's Office, Thousand Oaks P.D.</h3>
+                            <div class="subheading mb-3">Crime Analyst II</div>
+                            <p>Differentiated between actual and perceived crime problems through the use of law enforcement databases, software applications, analytical techniques, and open-source materials to assist with investigations and address crime trends.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2007 - 2012</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
