Replaced Education Text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cottage Lake Elementary & Rancho Sienna Elementary</h3>
                             <div class="subheading mb-3">Volunteer Library Assistant</div>
-                            <p>Cultivated early literacy skills by guiding K-5 students to books that matched their unique interests, reading levels, and educational needs. Guided young users through uncertainty finding specific titles via Destiny Discover and managed interdistrict loan requests. Promoted library engagement and community fundraising by helping students and parents navigate events such as the Scholastic Book Fair.</p>
+                            <p>Cultivated early literacy skills by guiding K-5 students to books that matched their unique interests, reading levels, and educational needs. Guided young users through uncertainty finding specific titles via Destiny Discover and managed interlibrary loan requests within the district. Promoted library engagement and community fundraising by helping students and parents navigate events such as the Scholastic Book Fair.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019 - 2025</span></div>
                     </div>
@@ -81,18 +81,19 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Ventura County Sheriff's Office, Thousand Oaks P.D.</h3>
                             <div class="subheading mb-3">Crime Analyst II</div>
-                            <p>Differentiated between actual and perceived crime problems through the use of law enforcement databases, software applications, analytical techniques, and open-source materials to assist with investigations and address crime trends.</p>
+                            <p>Differentiated between actual and perceived crime problems through the use of law enforcement databases, software applications, analytical techniques, and open-source materials to assist with investigations and address crime trends. Used quantitative and qualitative research methods to reveal patterns in crime and explain underlying social factors, motivations, and ecological considerations for crime prevention.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2007 - 2012</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <!--Commented out below section. Might use in future.-->
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Design Intern</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -102,20 +103,21 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Denver, Morgridge College of Education</h3>
+                            <div class="subheading mb-3">Master of Library and Information Science</div>
+                            <!--Commented out below section. Update upon graduation. Add degree foucs and any earned distinctions.-->
+                            <!-- <div>Computer Science - Web Development Track</div>
+                            <p>GPA: 3.23</p> -->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2024 - 2026</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">California Lutheran University</h3>
+                            <div class="subheading mb-3">Bachelor of Science in Criminal Justice</div>
+                            <p>Magna Cum Laude</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2000 - 2004</span></div>
                     </div>
                 </div>
             </section>
