--- a/index.html
+++ b/index.html
@@ -126,39 +126,71 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Competencies</div>
+                    <ul class="fa-ul">
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Report Writing
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Quantitative & Qualitative Research
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Intelligence Repository
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Public Speaking
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Software Instruction
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3">Technologies</div>
+                    <ul class="fa-ul">
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Follett Destiny
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            LibGuides by Springshare
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Zotero
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Mapping & Analytics Software
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            LexisNexis
+                        </li>
+                    </ul>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
+                    <ul class="list-inline dev-icons mb-0">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                        <i class="fa-brands fa-drupal"></i>
+                        <i class="fa-brands fa-github"></i>
+                        
+                        <!--Add any applicable additional programming languages and tools -->
+
+                        <!-- <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
                         <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+                        <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
                     </ul>
                 </div>
             </section>
@@ -167,7 +199,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p>When not focused on professional endeavors, I enjoy applying a creative and analytical approach in the kithcen reimagining classic recipes with allergy-friendly ingredients for my family. I am a crochet enthusiast and yarn addict. I enjoy hiking, biking, roller skating, and yoga.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
