Replaced Interests Text

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>When not focused on professional endeavors, I enjoy applying a creative and analytical approach in the kithcen reimagining classic recipes with allergy-friendly ingredients for my family. I am a crochet enthusiast and yarn addict. I enjoy hiking, biking, roller skating, and yoga.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from professional endeavors, I enjoy applying a creative and analytical approach in the kitchen, reimagining classic recipes with allergy-friendly ingredients for my family. I am a crochet enthusiast and yarn addict whose love language is handmade arts and crafts.</p>
+                    <p class="mb-0">When I get out of the house, I love exploring local hiking and biking trails and pulling up to the skating rink to roller dance to funk music. Squirreling away time to tidy my mind with the occasional yoga session is my goal but if you can’t find me there, look in the back row at The Alamo Drafthouse Cinema.</p>
                 </div>
             </section>
             <hr class="m-0" />
