Replaced Awards Text

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from professional endeavors, I enjoy applying a creative and analytical approach in the kitchen, reimagining classic recipes with allergy-friendly ingredients for my family. I am a crochet enthusiast and yarn addict whose love language is handmade arts and crafts.</p>
-                    <p class="mb-0">When I get out of the house, I love exploring local hiking and biking trails and pulling up to the skating rink to roller dance to funk music. Squirreling away time to tidy my mind with the occasional yoga session is my goal but if you can’t find me there, look in the back row at The Alamo Drafthouse Cinema.</p>
+                    <p>Apart from my professional endeavors, I enjoy applying a creative and analytical approach in the kitchen, reimagining classic recipes with allergy-friendly ingredients for my family. I am a crochet enthusiast and yarn addict whose love language is handmade arts and crafts. If I am not unboxing a new board game, then I am probably reading about an overlooked area of science in the newest Mary Roach book.</p>
+                    <p class="mb-0">When I get out of the house, I love exploring local hiking and biking trails and pulling up to the skating rink to roller dance to funk music. Squirreling away time to tidy my mind with the occasional yoga session is my goal but if you can’t find me there, look in the back row at The Alamo Drafthouse Cinema. I’ll be in Theater 5 as long as it’s showing an animated film or a witty comedy.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -213,41 +213,31 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            Google Analytics Certified Developer
+                            Certified Crime and Intelligence Analyst, 2006
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Level I Bilingual Oral Certification, Spanish for Law Enforcement, 2008
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Ventura County Sheriff's Office, Six Formal Commendations, 2007-2012
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Ventura County Sheriff's Office, Two Letters from the Sheriff, 2007-2012
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Los Angeles County Sheriff's Office, Received Star Scroll Award, 2009
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            California Lutheran University, National Criminal Justice Honor Society, President, 2000-2004
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            California Lutheran University, Criminal Justice Departmental Assistant, 2000-2004
                         </li>
                     </ul>
                 </div>
