Add Video Content

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#video">Video</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#video">Videos</a></li>
                 </ul>
             </div>
         </nav>
@@ -46,6 +46,7 @@
                         <span class="text-primary">Clark</span>
                     </h1>
                     <div class="subheading mb-5">
+                        <!-- Add address below at a later date if applicable -->
                         <!-- Street Address · City, State Zip · (999) 999-9999 · -->
                         <a href="mailto:name@email.com">amanda.m.clark@du.edu</a>
                     </div>
@@ -247,7 +248,8 @@
             <!-- Video-->
             <section class="resume-section" id="video">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Video</h2>
+                    <h2 class="mb-5">Videos</h2>
+                    <p>I recently designed a workshop called "Curious Minds" that focuses on helping people learn about the varying degrees of trustworthiness of online sources of information. By fostering a sense of wonder and introducing modern strategies such as lateral reading, information professionals can help people make more informed decisions about how to engage with information they find online. The videos below feature similar content from the Digital Inquiry Group and CrashCourse, two wonderful resources that provide free educational materials.</p>
                 <!-- YouTube Embed Code Under This -->
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SHNprb2hgzU?si=utP7uUBsGTpjk5LO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GoQG6Tin-1E?si=VLK1e6EQx7-IFbjt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
