Add Education and Adjust Awards Section

--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024 - 2026</span></div>
                     </div>
+                                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">California State University Northridge, Tseng College of Extended Learning</h3>
+                            <div class="subheading mb-3">Crime & Intelligence Analysis Certification</div>
+                            <!--Commented out below section. Not applicable.-->
+                            <!-- <div>Computer Science - Web Development Track</div>
+                            <p>GPA: 3.23</p> -->
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2005 - 2006</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">California Lutheran University</h3>
@@ -210,12 +220,12 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Awards & Commendations</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Certified Crime and Intelligence Analyst, 2006
-                        </li>
+                        </li> -->
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Level I Bilingual Oral Certification, Spanish for Law Enforcement, 2008
@@ -249,7 +259,7 @@
             <section class="resume-section" id="video">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Videos</h2>
-                    <p>I recently designed a workshop called "Curious Minds" that focuses on helping people learn about the varying degrees of trustworthiness of online sources of information. By fostering a sense of wonder and introducing modern strategies such as lateral reading, information professionals can help people make more informed decisions about how to engage with information they find online. The videos below feature similar content from the Digital Inquiry Group and CrashCourse, two wonderful resources that provide free educational materials.</p>
+                    <p>I recently designed a workshop called "Curious Minds" that focuses on helping people learn about the varying degrees of trustworthiness of online sources of information. By fostering a sense of wonder and introducing modern strategies such as lateral reading, information professionals can help people make more informed decisions about how to engage with the information they find online. The videos below feature similar content from the Digital Inquiry Group and CrashCourse, two wonderful resources that provide free educational materials.</p>
                 <!-- YouTube Embed Code Under This -->
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SHNprb2hgzU?si=utP7uUBsGTpjk5LO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GoQG6Tin-1E?si=VLK1e6EQx7-IFbjt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
