Remove Social Icons

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                         <a href="mailto:name@email.com">amanda.m.clark@du.edu</a>
                     </div>
                     <p class="lead mb-5">I’m an information scientist and curiosity champion.<br>I am passionate about teaching people how to locate resources that feel elusive.</p>
-                    <div class="social-icons">
+                    <!-- <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -128,7 +128,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">California Lutheran University</h3>
                             <div class="subheading mb-3">Bachelor of Science in Criminal Justice</div>
-                            <p>Magna Cum Laude</p>
+                            <!-- <p>Magna Cum Laude</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2000 - 2004</span></div>
                     </div>
@@ -152,6 +152,10 @@
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Intelligence Repository
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            Data Analysis
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
@@ -241,6 +245,10 @@
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
                             Los Angeles County Sheriff's Office, Received Star Scroll Award, 2009
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
+                            California Lutheran University, Magna Cum Laude, 2000-2004
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-feather-pointed"></i></span>
