--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cottage Lake Elementary & Rancho Sienna Elementary</h3>
                             <div class="subheading mb-3">Volunteer Library Assistant</div>
-                            <p>Cultivated early literacy skills by guiding K-5 students to books that matched their unique interests, reading levels, and educational needs. Guided young users through uncertainty finding specific titles via Destiny Discover and managed interlibrary loan requests within the district. Promoted library engagement and community fundraising by helping students and parents navigate events such as the Scholastic Book Fair.</p>
+                            <p>Cultivated early literacy skills by guiding K-5 students to books that matched their unique interests, reading levels, and educational needs. Guided young users through uncertainty finding specific titles via Destiny Discover and managed interlibrary loan requests within the district. Promoted library engagement and community fundraising by helping students and caregivers navigate events such as the Scholastic Book Fair.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019 - 2025</span></div>
                     </div>
@@ -76,7 +76,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">International Association of Crime Analysts</h3>
                             <div class="subheading mb-3">Registrar/Invited Speakers Co-Chair</div>
-                            <p>Developed and managed efficient registration procedures, maintained records, electronically distributed conference materials and news, communicated status changes and processed payments. Processed post-conference feedback loops that increased attendance year-over-year.</p>
+                            <p>Developed and managed efficient registration procedures, maintained records, electronically distributed conference materials and news, communicated status changes, and processed payments. Facilitated post-conference feedback loops that increased attendance year-over-year.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2012 - 2015</span></div>
                     </div>
