--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Amanda Clark's Resume Page" />
+        <meta name="author" content="Amanda Clark" />
         <meta name="referrer" content="origin" />
         <title>Resume - Amanda Clark</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon-16x16.png" />
